# OpenSecurity

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  run.py
backend/agents/: __init__.py  base.py  manager.py
backend/api/: __init__.py  main.py
backend/api/routes/: __init__.py  agents.py  auth.py  detectors.py  health.py
backend/core/: __init__.py  config.py  logging.py
backend/detectors/: __init__.py  anomaly.py  base.py  manager.py  rules.py
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_detectors.py
